# ctf-arena

./: .gitignore  CLAUDE.md  docker-compose.yaml
api/: .env.example  Cargo.toml  Dockerfile
api/src/: auth.rs  challenges.rs  config.rs  db.rs  error.rs  main.rs  queue.rs  sandbox.rs
api/tests/: base64.c  base64.go  base64.js  base64.lua  base64.nim  base64.py  base64.rs  base64.zig  empty.S  envleak.S  envleak.c  envleak.clj  envleak.cpp  envleak.cs  envleak.go  envleak.hs  envleak.java  envleak.kt  envleak.lua  envleak.ml  envleak.nim  envleak.pas  envleak.php  envleak.pl  envleak.py  envleak.rs  envleak.scala  envleak.swift  envleak.tcl  envleak.ts  envleak.zig  envleak_deno.ts  hello.S  hello.clj  hello.erl  hello.scala  hello_raw.c  hello_tiny.S  portscan.c  portscan.clj  (+20 more)
compile-worker/: Cargo.toml  Dockerfile
compile-worker/src/: main.rs
compiler/: Dockerfile  Dockerfile.mid  Dockerfile.simple  compile.sh
compiler/scripts/: compile-asm.sh  compile-bun.sh  compile-c.sh  compile-clojure.sh  compile-cpp.sh  compile-csharp.sh  compile-deno.sh  compile-elixir.sh  compile-erlang.sh  compile-go.sh  compile-haskell.sh  compile-java.sh  compile-javascript.sh  compile-kotlin.sh  compile-lua.sh  compile-nim.sh  compile-node.sh  compile-ocaml.sh  compile-pascal.sh  compile-perl.sh  compile-php.sh  compile-python.sh  compile-racket.sh  compile-rust.sh  (+6 more)
sandbox/: CLAUDE.md  Dockerfile  Dockerfile.native  Dockerfile.runtimes  entrypoint.sh  sandbox.py
web/: Dockerfile  package-lock.json  package.json  tailwind.config.js
worker/: Cargo.toml  Dockerfile
(+60 files in other folders)
