[package]
name = "compile-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
urlencoding = "2"
